# b-unknown

./: .gitignore  .gitmodules  CMakeLists.txt  build-web.ps1  build-web.sh
data/shaders/glsl-100/: crt.glsl
data/shaders/glsl-330/: crt.glsl
src/: colors.hh  defs.hh  global.hh  main.cc  resources.hh  state.hh
src/resource/: font.hh  image.hh  shader.hh  sound.hh  sprite.hh  texture.hh
src/resources/: fonts.hh  images.hh  shaders.hh  sprites.hh  textures.hh
src/scene/: base.hh  boot.cc  boot.hh  manager.hh
src/scenes/: boot.cc  boot.hh  scene.hh
src/shaders/: crt.hh
